<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FEF7FF">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="193dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:text="@string/google_login"
        android:textAllCaps="false"
        android:textColor="#818181"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:text="@string/facebook_login"
        android:textAllCaps="false"
        android:textColor="#3b5998"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <ImageButton
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="646dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corner_button"
        android:backgroundTint="#6FB98F"
        android:contentDescription="@string/button_description"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_no_account"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="356dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_guest"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="387dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgotten"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="419dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="358dp"
        android:layout_height="36dp"
        android:background="@drawable/rounded_corner"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="182dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="358dp"
        android:layout_height="36dp"
        android:background="@drawable/rounded_corner"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="241dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:background="@color/white"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="170dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/login_password"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="230dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>