<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FEF7FF"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:text="@string/google_login"
        android:textAllCaps="false"
        android:textColor="#818181"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:text="@string/facebook_login"
        android:textAllCaps="false"
        android:textColor="#3b5998"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonPage1"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/rounded_corner_button"
        android:backgroundTint="#6FB98F"
        android:contentDescription="@string/button_description"
        android:onClick="@+id/action_login_page_to_register_page"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="340dp"
        android:text="@string/login_no_account"
        android:textColor="@color/cadet_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="380dp"
        android:text="@string/login_as_guest"
        android:textColor="@color/cadet_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="420dp"
        android:text="@string/password_forgotten"
        android:textColor="@color/cadet_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/eMailorPhoneText"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/rounded_corner"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="210dp"
        android:background="@color/white"
        android:text="@string/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="315dp"
        android:background="@color/white"
        android:text="@string/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="150dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mail_20dp_fill0_wght400_grad0_opsz20" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key_20dp_fill0_wght400_grad0_opsz20" />



</androidx.constraintlayout.widget.ConstraintLayout>